Add core structure for home page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <meta name="description" content="Love Running club for runners in Dublin, ireland">
     <meta name="keywords" content="Love running, running club, ireland, dublin">
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
     <title>Love Running</title>
 </head>
 <body>
-    <h1>hello world</h1>
+<header>Header content</header>
+<section>Main images</section>
+<section>club ethos</section>
+<section>running location, distances and times</section>
+<footer>social links here</footer>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
