--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,12 +11,27 @@
 
     <title>Love Running</title>
 </head>
+
 <body>
-<header>Header content</header>
-<section>Main images</section>
-<section>club ethos</section>
-<section>running location, distances and times</section>
-<footer>social links here</footer>
+    <header>
+        <a href="index.html">
+            <h1>Love Running </h1>
+        </a>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#sign-up">Sign Up</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <section>Main images</section>
+    <section>club ethos</section>
+    <section>running location, distances and times</section>
+    <footer>social links here</footer>
 
 
 
@@ -27,4 +43,5 @@
 
 
 </body>
+
 </html>
