--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <h1 id="logo">Love Running </h1>
         </a>
 
-        <nav>
+        <nav id="menue">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#sign-up">Sign Up</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
     </header>
