--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <div id="hero-image">  </div>
+    </section>
 
 
-    <section>Main images</section>
+
+
     <section>club ethos</section>
     <section>running location, distances and times</section>
     <footer>social links here</footer>
