--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 </div>
 </section>
 
-    <section>
+
+    <section id="times">
         <div>
             <h2>Urban</h2>
             <h3>Monday</h3>
