--- a/index.html
+++ b/index.html
@@ -110,11 +110,26 @@
         </div>
     </section>
 
-
-
-
-
-    <footer>social links here</footer>
+    <footer>
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" aria-lebal="visit our facebook page (open in new tab)" 
+                rel="nooopener"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" aria-lebal="visit our youtube page (open in new tab)" 
+                rel="nooopener"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" aria-lebal="visit our twitter page (open in new tab)" 
+                rel="nooopener"><i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" aria-lebal="visit our instagram page (open in new tab)" 
+                rel="nooopener"><i class="fa-brands fa-instagram-square"></i></a>
+            </li>
+        </ul>
+    </footer>
 
 
 
