--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav id="menue">
             <ul>
                 <li><a href="#sign-up">Sign Up</a></li>
-                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
