--- a/gallery.html
+++ b/gallery.html
@@ -26,6 +26,18 @@
             </ul>
         </nav>
     </header>
+
+    <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="two athletes run together">
+        <img src="assets/images/girls.jpg" alt="there girls at charity paint running festival">
+        <img src="assets/images/runner3.jpg" alt="Solo male runnerv jogging on a beach">
+        <img src="assets/images/man.jpg" alt="man is running at charity paint running festival">
+        <img src="assets/images/runner1.jpg" alt="Solo female running jogging through Phoenix park">
+        <img src="assets/images/runner2.jpg" alt="runners competing in marathon">
+        <img src="assets/images/runner4.jpg" alt="Solo female runnerv jogging on a beach">
+        <img src="assets/images/running_gang.jpg" alt="large group of runners take part in a marathon on a rainy day">
+        <img src="assets/images/mud-run.jpg" alt="two women runners taking a muddy selfie after the mud runner championship">
+    </section>
     
    
       
