--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <nav id="menue">
             <ul>
-                <li><a href="#sign-up">Sign Up</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="index.html" class="active">Home</a></li>
             </ul>
@@ -34,7 +34,7 @@
         </div>
     </section>
 
-    <section id="club-ethos">
+<section id="club-ethos">
 <h2 id="welcome">Why love running with us?</h2>
 <div id="left-about">
     <div class="left-about-heading">
@@ -71,8 +71,7 @@
 </div>
 </section>
 
-
-    <section id="times">
+<section id="times">
         <div>
             <h2>Urban <i class="fa-solid fa-city"></i></h2>
             <h3>Monday</h3>
@@ -108,7 +107,7 @@
             <h3>The Marker Hotel</h3>
             <h3>11:30</h3>
         </div>
-    </section>
+</section>
 
     <footer>
         <ul class="social-networks">
