--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
     </header>
     
 <section >
-<form method="POST" action="action="https://formdump.codeinstitute.net/"">
+<form class="signup-form" method="POST" action="action="https://formdump.codeinstitute.net/"">
 <h2>Let's get you signed up! </h2>
 <label for="fname">First Name</label>
 <input type="text" name="first_name" id="fname" required >
