--- a/signup.html
+++ b/signup.html
@@ -1,11 +1,4 @@
 
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -35,7 +28,7 @@
         </nav>
     </header>
     
-<section >
+<section class="form-section">
 <form class="signup-form" method="POST" action="action="https://formdump.codeinstitute.net/"">
 <h2>Let's get you signed up! </h2>
 <label for="fname">First Name</label>
