--- a/signup.html
+++ b/signup.html
@@ -32,13 +32,13 @@
 <form class="signup-form" method="POST" action="action="https://formdump.codeinstitute.net/"">
 <h2>Let's get you signed up! </h2>
 <label for="fname">First Name</label>
-<input type="text" name="first_name" id="fname" required >
+<input type="text" class= "text-input" name="first_name" id="fname" required >
 
 <label for="lname">Last Name</label>
-<input type="text" name="last_name" id="lname" required>
+<input type="text" class= "text-input" name="last_name" id="lname" required>
 
 <label for="email">Email</label>
-<input type="email" id="email" name="email_address" required>
+<input type="email" id="email" class= "text-input" name="email_address" required>
 
 <label for="road">Road</label>
 <input type="radio" id="road" name="running-preference" value="road" required>
@@ -49,7 +49,7 @@
 <label for="both">Both</label>
 <input type="radio" id="both" name="running-preference" value="both">
 
-<input type="submit" value="Let's Run!">
+<input class="join-button" type="submit" value="Let's Run!">
 
 </form>
 </section>
