--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
 
         <nav id="menue">
             <ul>
-                <li><a href="#sign-up">Sign Up</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
                 <li><a href="gallery.html" class="active">Gallery</a></li>
                 <li><a href="index.html" >Home</a></li>
             </ul>
