--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
     
 <section class="form-section">
 <form class="signup-form" method="POST" action="action="https://formdump.codeinstitute.net/"">
-<h2>Let's get you signed up! </h2>
+<h2>Let's get you signed up! <i class="fas fa-heartbeat"></i></h2>
 <label for="fname">First Name</label>
 <input type="text" class= "text-input" name="first_name" id="fname" required >
 
